--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "pnpm": ">=8.0.0"
   },
   "dependencies": {
-    "@radix-ui/react-alert-dialog": "^1.1.15",
-    "zod": "^3.22.4"
+    "@radix-ui/react-alert-dialog": "^1.1.15"
   }
 }
